--- a/Joshua-Boo-Boos MEGA Exo Mod/mod.settings
+++ b/Joshua-Boo-Boos MEGA Exo Mod/mod.settings
@@ -7,7 +7,7 @@ Alien players with a cloaking value of 0.5 or more are not detected by the perio
 
 The minigun exo has in addition to the scan received a new mode called "Siege Mode" which decreases the rate of fire of the minigun to 25% of the base value but increases the damage by a factor of 4 and is then increased by 10%.
 
-Minigun exos cannot move while in Siege Mode and have their fuel set to zero.
+Minigun exos while in Siege Mode have their fuel set to zero.
 
 Siege Mode can be activated and deactivated once every five seconds.
 
@@ -17,9 +17,11 @@ The minigun sound has been changed and is played differently based on whether th
 
 Press your reload key to enter and leave Siege Mode.
 
-Furthermore, missiles have been added to the minigun exo which require 100% fuel to use.
+Furthermore, missiles, mines and a nanoshield ability have been added to the minigun exo.
 
-Press 4 to fire a tracking missile which tracks alien players and deals 50 damage to alien players only and press 5 to fire a proximity mine which deals 100 damage to alien players only.]=]
+Press 5 to cycle between: tracking missile, mine and nanoshield.
+
+Press 4 to activate the above ability (each has a cooldown and requires 100% fuel to use).]=]
 image       = "joshua-boo-boos mega exo mod.jpg"
 tag_modtype = "Gameplay Tweak"
 tag_support = "Must be run on Server"
