I updated my roll the dice mod functionality.

--- a/Joshua-Boo-Boos Roll The Dice Mod/mod.settings
+++ b/Joshua-Boo-Boos Roll The Dice Mod/mod.settings
@@ -11,7 +11,7 @@ Based on the roll that a player makes that player receives a random buff or debu
 
 Players can only roll once every 10 seconds and bots cannot roll.
 
-There are current the following effects:
+There are currently the following effects:
 
 Outcome 1:
 
