I updated my roll the dice mod functionality.

--- a/Joshua-Boo-Boos Roll The Dice Mod/mod.settings
+++ b/Joshua-Boo-Boos Roll The Dice Mod/mod.settings
@@ -43,7 +43,7 @@ Slap self (multiple slaps for Exo).
 
 Outcome 8:
 
-Slap enemy to near death (5 slaps over time with each slap dealing nearly 20% HP or AP per slap).
+Slap enemy 5 times dealing in total more than the max HP of the target (this can be survived).
 
 Outcome 9:
 
