--- a/Joshua-Boo-Boos Mac-10 Mod/mod.settings
+++ b/Joshua-Boo-Boos Mac-10 Mod/mod.settings
@@ -1,7 +1,15 @@
 name        = "Joshua-Boo-Boos Mac-10 Mod"
 source_dir  = "source"
 output_dir  = "output"
-description = [=[This mod changes the pistol into a suppressed Mac-10. The Mac-10 has 20 round magazines and does 5 damage per shot.]=]
+description = [=[This mod adds a new weapon to the marine arsenal - the Mac-10 machine pistol.
+
+It does 12.5 damage at W0 and can be bought when AA is researched.
+
+This is the first suppressed weapon in NS2 that I have seen!
+
+Combat compatible requiring W1 before unlocking!
+
+Also compatible with the CBM!]=]
 image       = "preview.jpg"
 tag_modtype = "Gameplay Tweak"
 tag_support = "Must be run on Server"
