--- a/Joshua-Boo-Boos Suppressed Shotgun Mod - Copy/mod.settings
+++ b/Joshua-Boo-Boos Suppressed Shotgun Mod - Copy/mod.settings
@@ -5,14 +5,14 @@ description = [=[This mod adds an entirely new Marine weapon - the Suppressed Sh
 
 Buffs:
 
-35% distance between pellet rings compared to the NS2 shotgun
+75% distance between pellet rings compared to the NS2 shotgun
 Has the four cartridge types included in my first shotgun mod!
 0.3 seconds per shot
-8-11 (12 with Weapons 4) cartridge capacity
+7-10 (11 with Weapons 4) cartridge capacity
 
 Debuffs:
 
-50% pellet damage compared to the NS2 shotgun
+Deals less damage in general compared to the NS2 shotgun (as described when the Suppressed Shotgun is equipped).
 
 This new weapon is Combat and Mac-10 but not CBM compatible.]=]
 image       = "preview.jpg"
