--- a/Joshua-Boo-Boos MEGA Exo Mod - Copy/mod.settings
+++ b/Joshua-Boo-Boos MEGA Exo Mod - Copy/mod.settings
@@ -9,13 +9,11 @@ Minigun Exos receive Siege Mode which is activatable by pressing your reload key
 
 In Defense rounds Minigun Exos when in Siege Mode spawn three missiles in a row per minigun.
 
-In Combat rounds Minigun Exos when in Siege Mode spawn two missiles in a row per minigun.
-
 Minigun exos while in Siege Mode have their fuel set to zero.
 
 Siege Mode can be activated and deactivated once every five seconds.
 
-Marine players cannot leave a minigun exo while Siege Mode is activate nor can the minigun exo be moved.
+Marine players cannot leave a minigun exo while Siege Mode is activate.
 
 The minigun sound has been changed and is played differently based on whether the minigun exo is in Siege Mode or not.
 
